<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <TextView
                android:id="@+id/grocery_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grocery_item"
                android:textStyle="italic"
                android:layout_centerHorizontal="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/grocery_item"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/grocery_item_hint"
                android:layout_below="@id/grocery_text"/>

            <EditText
                android:id="@+id/grocery_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/grocery_quantity"
                android:layout_below="@id/grocery_item"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
                android:layout_below="@id/grocery_quantity"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp"/>


        </RelativeLayout>



    </androidx.cardview.widget.CardView>
</LinearLayout>