<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp">

            <TextView
                android:id="@+id/confirmationId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sure"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:textSize="17dp"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/NoButtonID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noButton"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_below="@id/confirmationId"/>

            <Button
                android:id="@+id/YesButtonID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yesButton"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/confirmationId"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>