<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.DetailsActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/groceryNameDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_test"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/groceryQuantityDet"
                android:layout_below="@+id/groceryNameDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qty"
                android:textStyle="italic"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/groceryDateAddedDet"
                android:layout_below="@+id/groceryQuantityDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detDateAdded"
                android:textStyle="italic"
                android:textSize="14sp"/>

            <TableRow
                android:layout_alignParentRight="true"
                android:padding="15dp"
                android:layout_alignBottom="@id/groceryDateAddedDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/groceryEditButtonDet"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:drawable/ic_menu_edit"
                    android:layout_marginRight="15dp"
                    />
                <Button
                    android:id="@+id/groceryDeleteButtonDet"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:drawable/ic_menu_delete"
                    android:padding="5dp"
                    />

            </TableRow>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>